fixed horizontal scrollbar

--- a/extension/style.css
+++ b/extension/style.css
@@ -3,7 +3,6 @@
     border: none;
     padding: 5px;
     color: rgb(36, 41, 46);
-    right: -1px;
 }
 
 .NPG-dropdown .boxed-group {
